# Netflix-OCA-Servers-Locator

./: .gitignore  Dockerfile  LICENSE  README.md  bandit-report.json  docker-compose.yml  docker-entrypoint.sh  findOCA.py  find_netflix_ocas.py  get_ocas.nim  get_ocas.py  main.py  pyproject.toml  requirements.txt  run-docker.sh
.github/workflows/: ci.yml  docker.yml
docs/: THEALEPH_IPV6_SUPPORT.md
src/netflix_oca_locator/: __init__.py  __main__.py
src/netflix_oca_locator/api/: dns_resolver.py  fast_com.py  ip_services.py
src/netflix_oca_locator/cli/: interface.py
src/netflix_oca_locator/config/: settings.py
src/netflix_oca_locator/core/: models.py  oca_locator.py
src/netflix_oca_locator/utils/: __init__.py  aleph_geocoding.py  formatters.py  geocoding.py  logging.py  mapping.py
tests/: conftest.py
tests/test_core/: test_models.py
tests/test_utils/: test_aleph_geocoding.py
